--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                         <ul>
                             <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">HTML5</span> </li> 
                             <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">CSS3</span>  </li>
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">Sass</span>  </li>
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">JavaScript</span>  </li>
                         </ul>
                     </div>
                     <!--Soft Skills container-->
@@ -80,6 +82,11 @@
                             <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/WebStudio/">https://oleksandrvasylchuk.github.io/WebStudio/</a>
                             <span class="dots">............  </span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3 <b>]</b> </span>
+                        </div>
+                        <div class="projects-item">
+                            <a class="projekts-link" href="https://dmitry-karas.github.io/front-end__division--HellEN/">Team project</a>
+                            <span class="dots">........ </span>
+                            <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
                         </div>
                        
                     </section>
