--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                     <section class="projekts-conainer"> 
 
                        <div class="projects-item">
-                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/WebStudio/">https://oleksandrvasylchuk.github.io/WebStudio/</a>
+                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/WebStudio/">WebStudio</a>
                             <span class="dots">............  </span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3 <b>]</b> </span>
                         </div>
                         <div class="projects-item">
                             <a class="projekts-link" href="https://dmitry-karas.github.io/front-end__division--HellEN/">Team project</a>
-                            <span class="dots">........ </span>
+                            <span class="dots">........</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
                         </div>
                        
