--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
                     <div class="Tech-Skills-container">
                         <h3 class="Tech-Skills-taitl">Tech Skills</h3>
                         <ul>
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">JavaScript</span>  </li>
                             <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">HTML5</span> </li> 
                             <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">CSS3</span>  </li>
                             <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">Sass</span>  </li>
-                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">JavaScript</span>  </li>
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">Git</span>  </li>
                         </ul>
                     </div>
                     <!--Soft Skills container-->
@@ -49,8 +50,8 @@
                         <li class="Soft-Skills-line"><span class="Soft-Skills-tekst">Reliable</span></li>
                         <li class="Soft-Skills-line"><span class="Soft-Skills-tekst">Teamwork</span></li>
                         <li class="Soft-Skills-line"><span class="Soft-Skills-tekst">Purposeful</span></li>
-                        <li class="Soft-Skills-line"><span class="Soft-Skills-tekst">Communicable</span></li>
                         <li class="Soft-Skills-line"><span class="Soft-Skills-tekst">Fast learning</span></li>
+                        <li class="Soft-Skills-line"><span class="Soft-Skills-tekst">Communicable</span></li>
                     </ul>
                     </div>
                 </div>
@@ -63,7 +64,7 @@
                 <!---about me main info-->
                 <div class="info-conteiner">
 
-                    <h2 class="profession">HTML coder</h2>
+                    <h2 class="profession">Front-end Developer,  HTML coder</h2>
                     <h1 class="name">Oleksandr Vasylchuk</h1>
                     <p class="diskription"></p>
                
@@ -88,7 +89,21 @@
                             <span class="dots">........</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
                         </div>
-                       
+                        <div class="projects-item">
+                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-js-hw-11-timer/">Timer</a>
+                            <span class="dots">.......................</span>
+                            <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
+                        </div>
+                         <div class="projects-item">
+                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-js-hw-12-countries/">Country search</a>
+                            <span class="dots">....</span>
+                            <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
+                        </div>
+                         <div class="projects-item">
+                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-js-hw-13-image-finder/">Search images</a>
+                            <span class="dots">.....</span>
+                            <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
+                        </div>
                     </section>
 
                     <!--Work Experience-->
@@ -100,10 +115,7 @@
                             <span class="profesion-time">October 2019 - up to now | Ukraine
 
                             </span>
-                            <ul class="profesion-dutis">
-                                <li>Transportation of passengers.</li>
-                                <li>Be absolutely correct and tactful in communicating with customers.</li>   
-                            </ul>
+
 
 
                         </div>
