--- a/index.html
+++ b/index.html
@@ -81,27 +81,32 @@
 
                        <div class="projects-item">
                             <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/WebStudio/">WebStudio</a>
-                            <span class="dots">............  </span>
+                            <span class="dots">................................  </span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3 <b>]</b> </span>
                         </div>
                         <div class="projects-item">
                             <a class="projekts-link" href="https://dmitry-karas.github.io/front-end__division--HellEN/">Team project</a>
-                            <span class="dots">........</span>
+                            <span class="dots">............................</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
                         </div>
                         <div class="projects-item">
                             <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-js-hw-11-timer/">Timer</a>
-                            <span class="dots">.......................</span>
+                            <span class="dots">...........................................</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
                         </div>
                          <div class="projects-item">
                             <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-js-hw-12-countries/">Country search</a>
-                            <span class="dots">....</span>
+                            <span class="dots">........................</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
                         </div>
                          <div class="projects-item">
                             <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-js-hw-13-image-finder/">Search images</a>
-                            <span class="dots">.....</span>
+                            <span class="dots">.........................</span>
+                            <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
+                        </div>
+                        <div class="projects-item">
+                            <a class="projekts-link" href="https://dmitry-karas.github.io/front-end__division--filmoteka/">Team project filmoteka</a>
+                            <span class="dots">.......</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
                         </div>
                     </section>
@@ -111,8 +116,8 @@
                         <h3 class="about-me-taitle">Work Experience</h3>
                         <!--compani 1-->
                         <div>
-                            <h4 class="profesion-titl">Self-employed taxi driver <span class="profesion-compani">  Ukrainian and international companies</span>  </h4>
-                            <span class="profesion-time">October 2019 - up to now | Ukraine
+                            <h4 class="profesion-titl">Seo web developer<span class="profesion-compani">  Semalt</span>  </h4>
+                            <span class="profesion-time">June 2021 - up to now | Ukraine
 
                             </span>
 
