--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
                         <h3 class="Tech-Skills-taitl">Tech Skills</h3>
                         <ul>
                             <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">JavaScript</span>  </li>
-                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">HTML5</span> </li> 
-                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">CSS3</span>  </li>
-                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">Sass</span>  </li>
-                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">Git</span>  </li>
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">HTML5</span><img align="left" alt="HTML" width="32px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" /> </li> 
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">CSS3</span> <img align="left" alt="CSS" width="32px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png" /> </li>
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">Sass</span> <img align="left" alt="Sass" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/sass/sass.png" /> </li>
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">Git</span> <img align="left" alt="Git" width="32px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png" /> </li>
+                            <img align="left" alt="JavaScript" width="32px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" />
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">GitHub</span><img align="left" alt="GitHub" width="32px" src="https://raw.githubusercontent.com/github/explore/78df643247d429f6cc873026c0622819ad797942/topics/github/github.png" /></li>
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">React</span><img align="left" alt="React" width="32px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png" /></li>
+                            <li class="Tech-Skiemlls-line"> <span class="Tech-Skiells-tekst">Visual Studio Code</span><img alt="Visual Studio Code" width="32px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png" /></li>
                         </ul>
                     </div>
                     <!--Soft Skills container-->
@@ -108,6 +112,11 @@
                             <a class="projekts-link" href="https://dmitry-karas.github.io/front-end__division--filmoteka/">Team project filmoteka</a>
                             <span class="dots">.......</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
+                        </div>
+                         <div class="projects-item">
+                            <a class="projekts-link" href="https://dmitry-karas.github.io/front-end__division--filmoteka/">project</a>
+                            <span class="dots">.......</span>
+                            <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript, React<b>]</b> </span>
                         </div>
                     </section>
 
