--- a/index.html
+++ b/index.html
@@ -124,8 +124,13 @@
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript <b>]</b> </span>
                         </div>
                          <div class="projects-item">
-                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-react-hw-01-components/">React components</a>
-                            <span class="dots">................</span>
+                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-react-hw-02-feedback-/">React feedback</a>
+                            <span class="dots">.......................</span>
+                            <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript, React<b>]</b> </span>
+                        </div>
+                         <div class="projects-item">
+                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-react-hw-02-phonebook/">React phonebook</a>
+                            <span class="dots">..................</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript, React<b>]</b> </span>
                         </div>
                     </section>
@@ -135,7 +140,7 @@
                         <h3 class="about-me-taitle">Work Experience</h3>
                         <!--compani 1-->
                         <div>
-                            <h4 class="profesion-titl">Seo web developer<span class="profesion-compani">  Semalt</span>  </h4>
+                            <h4 class="profesion-titl">Search Engine Optimization WEB Developer.<span class="profesion-compani">  Semalt</span>  </h4>
                             <span class="profesion-time">June 2021 - up to now | Ukraine
 
                             </span>
@@ -146,7 +151,7 @@
 
                         <!--compani 2-->
                         <div>
-                            <p class="profesion-titl">Individual entrepreneur<span class="profesion-compani">  Sweet City</span> </p> 
+                            <p class="profesion-titl">Individual entrepreneur.<span class="profesion-compani">  Sweet City</span> </p> 
                             <span class="profesion-time">March 2019 - October 2019 <span class="profesion-divider">|</span> Ukraine  </span>
 
                           
@@ -162,7 +167,7 @@
 
                         <!--compani 3-->
                         <div>
-                            <p class="profesion-titl">Barista<span class="profesion-compani">  Aroma coffee</span></p>
+                            <p class="profesion-titl">Barista.<span class="profesion-compani">  Aroma coffee</span></p>
                                  
                             <span class="profesion-time"> February 2018 - March 2019 <span class="profesion-divider">|</span> Ukraine
 
