--- a/index.html
+++ b/index.html
@@ -129,8 +129,13 @@
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript, React<b>]</b> </span>
                         </div>
                          <div class="projects-item">
-                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-react-hw-02-phonebook/">React phonebook</a>
+                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-react-hw-03-phonebook/">React phonebook</a>
                             <span class="dots">..................</span>
+                            <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript, React<b>]</b> </span>
+                        </div>
+                        <div class="projects-item">
+                            <a class="projekts-link" href="https://oleksandrvasylchuk.github.io/goit-react-hw-03-image-finder/">React image finder</a>
+                            <span class="dots">...............</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript, React<b>]</b> </span>
                         </div>
                     </section>
@@ -165,22 +170,6 @@
 
                         </div>
 
-                        <!--compani 3-->
-                        <div>
-                            <p class="profesion-titl">Barista.<span class="profesion-compani">  Aroma coffee</span></p>
-                                 
-                            <span class="profesion-time"> February 2018 - March 2019 <span class="profesion-divider">|</span> Ukraine
-
-                            </span>
-                            <ul class="profesion-dutis">
-                                <li>Team formation and training. Participation in inventory</li>
-                                <li>Formation of applications and acceptance of goods.</li>
-                                <li>Control of all work processes.</li>
-                            </ul>
-
-
-                        </div>
-                        
                     </section>
                     <!--Education-->
                     <section>
