--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
                         <h3 class="Tech-Skills-taitl">Tech Skills</h3>
                         <ul>
                             <li class="Tech-Skiemlls-line"><img alt="Visual Studio Code" width="20px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png" /> <span class="Tech-Skiells-tekst">Visual Studio Code</span></li>
+                             <li class="Tech-Skiemlls-line">  <img alt="WordPress" width="20px" src="https://img.icons8.com/color/50/000000/wordpress.png" /><span class="Tech-Skiells-tekst">WordPress</span> </li>
                             <li class="Tech-Skiemlls-line">  <img alt="JavaScript" width="20px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" /><span class="Tech-Skiells-tekst">JavaScript</span></li>
                             <li class="Tech-Skiemlls-line"><img alt="GitHub" width="20px" src="https://raw.githubusercontent.com/github/explore/78df643247d429f6cc873026c0622819ad797942/topics/github/github.png" /> <span class="Tech-Skiells-tekst">GitHub</span></li>
                             <li class="Tech-Skiemlls-line"> <img alt="HTML" width="20px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" /><span class="Tech-Skiells-tekst">HTML5</span></li> 
+                            <li class="Tech-Skiemlls-line">  <img alt="Figma" width="20px" src="https://img.icons8.com/fluent/50/000000/figma.png" /><span class="Tech-Skiells-tekst">Figma</span> </li>
                             <li class="Tech-Skiemlls-line"> <img alt="React" width="20px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png" /><span class="Tech-Skiells-tekst">React</span></li>   
                             <li class="Tech-Skiemlls-line">  <img alt="CSS" width="20px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png" /><span class="Tech-Skiells-tekst">CSS3</span> </li>
                             <li class="Tech-Skiemlls-line"> <img alt="Sass" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/sass/sass.png" />  <span class="Tech-Skiells-tekst">Sass</span></li>
-                            <li class="Tech-Skiemlls-line">  <img alt="Git" width="20px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png" /><span class="Tech-Skiells-tekst">Git</span> </li>
-                            
+                            <li class="Tech-Skiemlls-line">  <img alt="Git" width="20px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png" /><span class="Tech-Skiells-tekst">Git</span> </li>                        
+
                         </ul>
                     </div>
                     <!--Soft Skills container-->
