--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                     <div class="Tech-Skills-container">
                         <h3 class="Tech-Skills-taitl">Tech Skills</h3>
                         <ul>
+                            
                             <li class="Tech-Skiemlls-line"><img alt="Visual Studio Code" width="20px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png" /> <span class="Tech-Skiells-tekst">Visual Studio Code</span></li>
+                            <li class="Tech-Skiemlls-line"><img alt="Visual Studio Code" width="20px" src="https://pngicon.ru/file/uploads/Chrome.png" /> <span class="Tech-Skiells-tekst">I can google</span></li>
                              <li class="Tech-Skiemlls-line">  <img alt="WordPress" width="20px" src="https://img.icons8.com/color/50/000000/wordpress.png" /><span class="Tech-Skiells-tekst">WordPress</span> </li>
                             <li class="Tech-Skiemlls-line">  <img alt="JavaScript" width="20px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" /><span class="Tech-Skiells-tekst">JavaScript</span></li>
                             <li class="Tech-Skiemlls-line"><img alt="GitHub" width="20px" src="https://raw.githubusercontent.com/github/explore/78df643247d429f6cc873026c0622819ad797942/topics/github/github.png" /> <span class="Tech-Skiells-tekst">GitHub</span></li>
@@ -81,7 +83,7 @@
                 <!---about me main info-->
                 <div class="info-conteiner">
                     <h1 class="name">Oleksandr Vasylchuk</h1>
-                    <h2 class="profession">Front-end Developer,  HTML coder</h2>
+                    <h2 class="profession">Front-end Developer</h2>
                     <p class="diskription"></p>
                
                 </div>
@@ -140,6 +142,11 @@
                             <span class="dots">...............</span>
                             <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript, React<b>]</b> </span>
                         </div>
+                        <div class="projects-item">
+                            <a class="projekts-link" href="https://sanyabatyushka-movies.netlify.app/">Filmoteka</a>
+                            <span class="dots">..................................</span>
+                            <span class="tech-name"> <b>[</b> HTML5, CSS3, JavaScript, React<b>]</b> </span>
+                        </div>
                     </section>
 
                     <!--Work Experience-->
@@ -188,7 +195,7 @@
                         </div>
                         <div>
                             <p class="uniwerseti">COURSES GoIT</p>
-                            <p class="spetialiti">Front-end Developer</p>
+                            <p class="spetialiti">Full stack Developer</p>
                             <span class="profesion-time">November 2020 - up to now <span class="profesion-divider">|</span>  Ukraine</span>
                         </div>
 
